Use sha2 rather than digest
On some versions of OpenSSL "SHA-256" doesn't exist, avoid confusion.

--- a/haproxy.conf
+++ b/haproxy.conf
@@ -1,3 +1,7 @@
+global
+  # For normalize-uri
+  expose-experimental-directives
+
 frontend www
   mode http
   # 2 general purpose tags in this stick-table, we're using the second one here
@@ -29,7 +33,7 @@ backend challenge
   http-request set-var(txn.tries) req.body_param(tries)
   http-request set-var(txn.ts) req.body_param(ts)
   http-request set-var(txn.host) hdr(Host),host_only
-  http-request set-var(txn.hash) src,concat(;,txn.host,),concat(;,txn.ts,),concat(;,txn.tries),digest(SHA-256),hex
+  http-request set-var(txn.hash) src,concat(;,txn.host,),concat(;,txn.ts,),concat(;,txn.tries),sha2,hex
   acl ts_recent date,neg,add(txn.ts) ge -60
   # 4 is the difficulty, should match "diff" in challenge.html.
   acl hash_good var(txn.hash) -m reg 0{4}.*
